samples/_failures_safe/1761275447_c59845_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ad77825.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
